--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@ crossorigin="anonymous"></script>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>MY DEVELOPER SKILLS</h1>
-            <ul>
-            </ul>
+        <table>
+            <tbody>
+            </tbody>
+        </table>
         <div>
         <input id="input" type="text" value=""></input>    
         <button id="add">ADD SKILL</button>
